# CM2603-Data_Science_Project-G20

./: LICENSE  MergedRealTime_withoutGyroscope.ipynb  PP(with and without temp).ipynb  README.md  Requirements.txt  Sketch_i2c.ino  Untitled13.ipynb  data_preprocessing.ipynb  finalFALL.py  main.py  pyproject.toml  ruff.toml  sysfall_readme.txt
Camera_Page/: button_test.html  camera_feed.html
Fall_Detection/: best_random_forest_model.pkl  fall_detection_log.csv  fall_detection_notebook.ipynb  image_train_pose_coordinates.csv  joint_merge_instruction.md  pseudocode_fall_detection.md  reshaped_pose_data.csv
Fall_detection_Merged_model_/: acc_sensor_predictions1.csv  camera_log.csv  spo2_log.csv
Report Contents/: CM2603 Final Thesis Marking Guide.xlsx  Declaration Page.docx  G20 - DGSP - Literature_Review - Himansa (1).docx  G20 - DGSP - Literature_Review - Mevinu.docx  Group 18 LR (final) (2).docx  Group_20.docx  Group_20_Conclusion_Chapter.docx  Group_20_DESIGN.docx  Group_20_Evaluation_Chapter.docx  Group_20_Implementation.docx  Group_20_Intoduction_Chapter.docx  Group_20_Methodology.docx  Group_20_Methodology_Revised.docx  Group_20_Presentation_Slides.pptx  Group_20_Project_Proposal STRESS REMOVED THIRD PERSON.docx  Group_20_Project_Proposal STRESS REMOVED.docx  Group_20_SLEP.docx  Group_20_Software_Requirements_Submission.docx  Group_20_Testing.docx  Himansa Jayasuriya.xlsx  Individual Log Book Template - Ethan.xlsx  Individual Log Book Template.xlsx  Mevinu Gunaratne.xlsx  Observations-Template.docx  Project Proposal Template Form.docx  Project ideas -senuli.docx  (+4 more)
(+122 files in other folders)
